--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,9 @@
     </dependencies>
 
     <build>
+
+        <defaultGoal>compile</defaultGoal>
+
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
