测试提交代码

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,3 +12,10 @@ logging:
     com.smarter.sell.dao : debug
 server:
   port: 9191
+ca:
+  test:
+    one: one
+    one-a: one
+  test-two:
+    two: two
+    two-b: two
